@startuml
set namespaceSeparator ::

class "adv_basics::models::quiz_question.dart::QuizQuestion" {
  +String text
  +List<String> answers
  +List<String> shuffledAnswers
}

class "adv_basics::questions_summary::questions_summary.dart::QuestionsSummary" {
  +List<Map<String, Object>> summaryData
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "adv_basics::questions_summary::questions_summary.dart::QuestionsSummary"

class "adv_basics::questions_summary::question_identifier.dart::QuestionIdentifier" {
  +int questionIndex
  +bool isCorrectAnswer
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "adv_basics::questions_summary::question_identifier.dart::QuestionIdentifier"

class "adv_basics::questions_summary::summary_item.dart::SummaryItem" {
  +Map<String, Object> itemData
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "adv_basics::questions_summary::summary_item.dart::SummaryItem"

class "adv_basics::quiz.dart::Quiz" {
  +State<Quiz> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "adv_basics::quiz.dart::Quiz"

class "adv_basics::quiz.dart::_QuizState" {
  -List<String> _selectedAnswers
  -String _activeScreen
  -void _switchScreen()
  -void _chooseAnswer()
  -void _onTimeUp()
  +void restartQuiz()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "adv_basics::quiz.dart::_QuizState"

class "adv_basics::screens::questions_screen.dart::QuestionsScreen" {
  +void Function(String) onSelectAnswer
  +void Function() onTimeUp
  +State<QuestionsScreen> createState()
}

"adv_basics::screens::questions_screen.dart::QuestionsScreen" o-- "null::void Function(String)"
"adv_basics::screens::questions_screen.dart::QuestionsScreen" o-- "null::void Function()"
"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "adv_basics::screens::questions_screen.dart::QuestionsScreen"

class "adv_basics::screens::questions_screen.dart::_QuestionsScreenState" {
  +int currentQuestionIndex
  -Timer? _timer
  -int _remainingTime
  -List<String> _shuffledAnswers
  +void initState()
  -void _startTimer()
  +void answerQuestion()
  +void dispose()
  +Widget build()
}

"adv_basics::screens::questions_screen.dart::_QuestionsScreenState" o-- "dart::async::Timer"
"flutter::src::widgets::framework.dart::State" <|-- "adv_basics::screens::questions_screen.dart::_QuestionsScreenState"

class "adv_basics::screens::results_screen.dart::ResultsScreen" {
  +void Function() onRestart
  +List<String> chosenAnswers
  +List<Map<String, Object>> summaryData
  +String getFeedback()
  +Widget build()
}

"adv_basics::screens::results_screen.dart::ResultsScreen" o-- "null::void Function()"
"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "adv_basics::screens::results_screen.dart::ResultsScreen"
@enduml
